# VA11

./: .gitignore  README.md  VAConfig.gradle  build.gradle
app/: build.gradle
app/sdk/: lib.aar
app/src/main/cpp/: CMakeLists.txt  Memory.h  SymbolFinder.cpp  hook.h  native-lib.cpp
app/src/main/java/LoadNative/: Native.java
app/src/main/java/io/virtualapp/: App.java  AppComponentDelegate.java  Auto_ComponentBuildMap.java
app/src/main/java/io/virtualapp/delegate/: MyComponentDelegate.java
app/src/main/java/io/virtualapp/home/: HomeActivity.java
app/src/main/java/io/virtualapp/utils/: DingTalk.java  SPTools.java
lib/: build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  Log.h
lib/src/main/cpp/Foundation/: IORelocator.cpp  IORelocator.h  Log.h  SymbolFinder.cpp  VMHook.cpp  VMHook.h  hideSegments.cpp
lib/src/main/cpp/Jni/: Helper.h  VAJni.cpp
lib/src/main/cpp/Memory/: FileWriteBuffer.cpp  FileWriteBuffer.h  MemCache.cpp  MemCache.h  Memory.cpp  Memory.h  SearchValue.cpp  SearchValue.h  getpid.cpp  getpid.h  inject.cpp  inject.h
lib/src/main/cpp/Socket/client/: MySocketClient.cpp  MySocketClient.h
lib/src/main/cpp/Socket/server/: MySocketServer.cpp  MySocketServer.h
lib/src/main/cpp/transparentED/: EncryptFile.cpp  fileCoder1.cpp
lib/src/main/java/com/lody/virtual/client/: NativeEngine.java  VClient.java
lib/src/main/java/com/lody/virtual/client/core/: SettingConfig.java
lib/src/main/java/com/lody/virtual/cpuabi/: RUtils.java
lib/src/main/java/com/lody/virtual/helper/utils/: FileUtils.java
lib/src/main/java/com/lody/virtual/os/: VEnvironment.java
lib/src/main/java/com/lody/virtual/remote/: InstalledAppInfo.java
lib/src/main/java/com/lody/virtual/tools/util/: FileWhiteListController.java
